--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx --watch src/server.ts",
+    "build": "tsc && rm -rf /dist && node /dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.0",
     "express": "^4.18.2"
@@ -17,6 +19,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5"
+    "@types/node": "^20.2.5",
+    "prisma": "^4.15.0",
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.4"
   }
 }
